<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_attach_money_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/splash_screen_message"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/budget_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/splash_screen_enter_edit_text" />

    <ImageView
        android:layout_marginTop="16dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_event_black_48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/enter_date_message"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/date_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/enter_date_edit_text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/save" />

</LinearLayout>
