<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.ishan.testapp.DataEntryFragment">

    <EditText
        android:id="@+id/givento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/given_to_edit_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/givenfor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/given_for_edit_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_edit_text"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="YOUR BUDGET APPEAR HERE"
            android:padding="16dp"
            android:id="@+id/budget_text_view"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/enter" />

    </LinearLayout>

</LinearLayout>
